Added functional for "add book"

--- a/LibraryProject/BookCollectionPage.xaml
+++ b/LibraryProject/BookCollectionPage.xaml
@@ -21,13 +21,17 @@
             <ColumnDefinition Width="234.4"/>
         </Grid.ColumnDefinitions>
         <ListView x:Name="listMenuView" Grid.Column="1" Grid.Row="1" Background="White"/>
-        <Button x:Name="btnBookViewBack" Content="Back" Margin="0,118,0,0" VerticalAlignment="Top" Height="107" Width="209" FontSize="72" Background="#FFA06BEF" Click="btnBookViewBack_Click" HorizontalAlignment="Center" BorderBrush="Black"/>
-        <ComboBox x:Name="cbFilter" Grid.Column="2" Margin="10,10,0,0" Grid.Row="1" Width="234" Background="White" Height="40">
+        <Button x:Name="btnBookViewBack" Content="Back" Margin="0,172,0,0" VerticalAlignment="Top" Height="53" Width="111" FontSize="22" Background="#FFA06BEF" Click="btnBookViewBack_Click" HorizontalAlignment="Center" BorderBrush="Black"/>
+        <ComboBox x:Name="cbFilter" Grid.Column="2" Margin="5,0,0,0" Grid.Row="1" Width="234" Background="White" Height="40" SelectionChanged="cbFilter_SelectionChanged">
             <ComboBoxItem Background="White" Content="By Title"/>
             <ComboBoxItem Content="by Year"/>
-            <ComboBoxItem Content="by Ganer"/>
+            <ComboBoxItem Content="by Country"/>
         </ComboBox>
-        <Button x:Name="btnAddBook" Content="Add " Margin="97,118,0,0" VerticalAlignment="Top" Height="107" Width="209" FontSize="72" Background="#FFA06BEF" Grid.Column="1" BorderBrush="Black" Click="btnAddBook_Click"/>
+        <Button x:Name="btnAddBook" Content="Add " Margin="0,172,0,0" VerticalAlignment="Top" Height="53" Width="109" FontSize="22" Background="#FFA06BEF" BorderBrush="Black" Click="btnAddBook_Click" Grid.Column="1"/>
+        <TextBlock Grid.Column="2" HorizontalAlignment="Left" Margin="10,203,0,0" TextWrapping="Wrap" Text="Sorting :" VerticalAlignment="Top" FontSize="24" FontWeight="Bold"/>
+        <Button x:Name="btnRemoveBook" Content="Remove" Margin="147,172,0,0" VerticalAlignment="Top" Height="53" Width="109" FontSize="22" Background="#FFA06BEF" BorderBrush="Black" Grid.Column="1"/>
+        <Button x:Name="btnFindBy" Content="Search" Margin="1318,168,0,0" VerticalAlignment="Top" Height="53" Width="109" FontSize="22" Background="#FFA06BEF" BorderBrush="Black" Grid.Column="1"/>
+        <TextBox Grid.Column="1" HorizontalAlignment="Left" Margin="1066,172,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="225" Height="53" FontSize="24" Background="White"/>
 
 
     </Grid>
