--- a/LibraryProject/AddNewBookPage.xaml
+++ b/LibraryProject/AddNewBookPage.xaml
@@ -29,14 +29,55 @@
             <ColumnDefinition Width="706"/>
             <ColumnDefinition Width="234.4"/>
         </Grid.ColumnDefinitions>
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Grid.Row="1" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Center" Height="85" Width="551" FontSize="48" TextAlignment="Left" Background="#FFFFF5F5" BorderBrush="Black" BorderThickness="5,5,5,5"/>
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Grid.Row="7" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Height="80" Width="541" FontSize="48" TextAlignment="Left" Background="White" BorderBrush="Black" BorderThickness="5,5,5,5"/>
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Grid.Row="5" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Center" Height="80" Width="531" FontSize="48" TextAlignment="Left" Margin="10,0,0,0" Background="White" BorderBrush="Black" BorderThickness="5,5,5,5"/>
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Grid.Row="3" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Center" Height="80" Width="541" FontSize="48" TextAlignment="Left" BorderBrush="#FF080303" Background="White" BorderThickness="5,5,5,5"/>
+        <TextBox Grid.Column="1" HorizontalAlignment="Left" Grid.Row="1" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="85" Width="551" FontSize="48" TextAlignment="Left" Background="#FFFFF5F5" BorderBrush="Black" BorderThickness="5,5,5,5"/>
+        <TextBox Grid.Column="1" HorizontalAlignment="Left" Grid.Row="7" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="80" Width="541" FontSize="48" TextAlignment="Left" Background="White" BorderBrush="Black" BorderThickness="5,5,5,5"/>
+        <TextBox Grid.Column="1" HorizontalAlignment="Left" Grid.Row="5" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="80" Width="531" FontSize="48" TextAlignment="Left" Margin="10,0,0,0" Background="White" BorderBrush="Black" BorderThickness="5,5,5,5"/>
+        <TextBox Grid.Column="1" HorizontalAlignment="Left" Grid.Row="3" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="80" Width="541" FontSize="48" TextAlignment="Left" BorderBrush="#FF080303" Background="White" BorderThickness="5,5,5,5"/>
         <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="10,177,0,0" TextWrapping="Wrap" Text="Title" VerticalAlignment="Top" Height="59" Width="176" FontSize="36" Grid.RowSpan="2" FontWeight="Bold"/>
         <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="10,27,0,0" Grid.Row="2" TextWrapping="Wrap" Text="Publish date" VerticalAlignment="Top" Height="59" Width="279" FontSize="36" Grid.RowSpan="2" FontWeight="Bold"/>
         <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="10,32,0,0" Grid.Row="4" TextWrapping="Wrap" Text="Publisher" VerticalAlignment="Top" Height="59" Width="176" FontSize="36" Grid.RowSpan="2" FontWeight="Bold"/>
         <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="0,32,0,0" Grid.Row="6" TextWrapping="Wrap" Text="Serial number" VerticalAlignment="Top" Height="59" Width="262" FontSize="36" Grid.RowSpan="2" FontWeight="Bold"/>
         <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="324,49,0,0" Grid.Row="2" TextWrapping="Wrap" Text="input example: year,month,day" VerticalAlignment="Top" Height="25" Width="225" FontSize="16" FontWeight="Normal" Foreground="#FFB50887"/>
+        <TextBox HorizontalAlignment="Left" Grid.Row="9" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="80" Width="541" FontSize="48" TextAlignment="Left" Background="White" BorderBrush="Black" BorderThickness="5,5,5,5" Grid.ColumnSpan="2" Margin="225,0,0,0"/>
+        <TextBlock HorizontalAlignment="Left" Margin="225,32,0,0" Grid.Row="8" TextWrapping="Wrap" Text="Country" VerticalAlignment="Top" Height="59" Width="262" FontSize="36" Grid.RowSpan="2" FontWeight="Bold" Grid.ColumnSpan="2"/>
+        <Grid Background="#FF76B3B1" Grid.ColumnSpan="4" Margin="0,0,-20,-45" Grid.RowSpan="11">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="235.2"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="80"/>
+
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="228.8"/>
+                <ColumnDefinition Width="731"/>
+                <ColumnDefinition Width="706"/>
+                <ColumnDefinition Width="234.4"/>
+            </Grid.ColumnDefinitions>
+            <TextBox x:Name="titleTxt" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="1" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="85" Width="551" FontSize="48" TextAlignment="Left" Background="#FFFFF5F5" BorderBrush="Black" BorderThickness="5,5,5,5"/>
+            <TextBox x:Name="serialNumberTxt" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="7" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="80" Width="541" FontSize="48" TextAlignment="Left" Background="White" BorderBrush="Black" BorderThickness="5,5,5,5"/>
+            <TextBox x:Name="publisherTxt" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="5" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="80" Width="531" FontSize="48" TextAlignment="Left" Background="White" BorderBrush="Black" BorderThickness="5,5,5,5"/>
+            <TextBox x:Name="publishDateTxt" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="3" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="80" Width="541" FontSize="48" TextAlignment="Left" BorderBrush="#FF080303" Background="White" BorderThickness="5,5,5,5"/>
+            <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="10,177,0,0" TextWrapping="Wrap" Text="Title" VerticalAlignment="Top" Height="59" Width="176" FontSize="36" Grid.RowSpan="2" FontWeight="Bold"/>
+            <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="10,27,0,0" Grid.Row="2" TextWrapping="Wrap" Text="Publish date" VerticalAlignment="Top" Height="59" Width="279" FontSize="36" Grid.RowSpan="2" FontWeight="Bold"/>
+            <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="10,32,0,0" Grid.Row="4" TextWrapping="Wrap" Text="Publisher" VerticalAlignment="Top" Height="59" Width="176" FontSize="36" Grid.RowSpan="2" FontWeight="Bold"/>
+            <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="0,32,0,0" Grid.Row="6" TextWrapping="Wrap" Text="Serial number" VerticalAlignment="Top" Height="59" Width="262" FontSize="36" Grid.RowSpan="2" FontWeight="Bold"/>
+            <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="324,49,0,0" Grid.Row="2" TextWrapping="Wrap" Text="input example: year,month,day" VerticalAlignment="Top" Height="25" Width="225" FontSize="16" FontWeight="Normal" Foreground="#FFB50887"/>
+            <TextBox x:Name="countryTxt" HorizontalAlignment="Left" Grid.Row="9" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="80" Width="541" FontSize="48" TextAlignment="Left" Background="White" BorderBrush="Black" BorderThickness="5,5,5,5" Grid.Column="1"/>
+            <TextBlock HorizontalAlignment="Left" Margin="225,32,0,0" Grid.Row="8" TextWrapping="Wrap" Text="Country" VerticalAlignment="Top" Height="59" Width="262" FontSize="36" Grid.RowSpan="2" FontWeight="Bold" Grid.ColumnSpan="2"/>
+            <TextBox Grid.Column="2" HorizontalAlignment="Center" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="322" Width="706" FontSize="48" TextAlignment="Left" Background="White" BorderBrush="Black" BorderThickness="5,5,5,5" Margin="0,233,0,0" Grid.RowSpan="5"/>
+            <TextBlock Grid.Column="2" HorizontalAlignment="Left" Margin="10,186,0,0" TextWrapping="Wrap" Text="Synopsis" VerticalAlignment="Top" Height="59" Width="262" FontSize="36" Grid.RowSpan="2" FontWeight="Bold"/>
+            <Button x:Name="btnAddNewBook" Content="Add new book" Height="80" Width="205" FontSize="22" Background="#FFA06BEF" BorderBrush="Black" Grid.Column="2" Grid.Row="6" IsEnabled="False" Margin="501,0,0,0" Click="btnAddNewBook_Click"/>
+            <Button x:Name="btnCheckFields" Content="Check fileds" Height="80" Width="205" FontSize="22" Background="#FFA06BEF" BorderBrush="Black" Grid.Column="2" Grid.Row="6" Click="btnCheckFields_Click"/>
+            <TextBlock x:Name="issuesTxt" Grid.Column="2" HorizontalAlignment="Left" Margin="0,10,0,0" Grid.Row="7" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="407" Height="160" Grid.RowSpan="3"/>
+            <Button x:Name="btnBookViewBack" Content="Back" Margin="0,172,0,0" VerticalAlignment="Top" Height="53" Width="111" FontSize="22" Background="#FFA06BEF" Click="btnBookViewBack_Click" HorizontalAlignment="Center" BorderBrush="Black"/>
+        </Grid>
     </Grid>
 </Page>
