--- a/LibraryProject/MainPage.xaml
+++ b/LibraryProject/MainPage.xaml
@@ -10,28 +10,44 @@
 
     <Grid Background="#FF76B3B1">
         <Grid.RowDefinitions>
-            <RowDefinition Height="300"/>
-            <RowDefinition Height="180"/>
-            <RowDefinition Height="140"/>
-            <RowDefinition Height="200"/>
+            <RowDefinition />
+            <RowDefinition Height="2*"/>
+            <RowDefinition />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="300"/>
-            <ColumnDefinition Width="330"/>
-            <ColumnDefinition Width="640"/>
-            <ColumnDefinition Width="330"/>
-            <ColumnDefinition Width="300"/>
+            <ColumnDefinition />
+            <ColumnDefinition Width="4*"/>
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
+        <Grid Grid.Row="1" Grid.Column="1" >
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Admin Panel" FontSize="35" FontFamily="Aharoni" FontWeight="Bold" TextDecorations="Underline"/>
+            <Button x:Name="btnJornalCol" Content="Jornal collection"  Grid.Row="1" Grid.Column="0"  Background="#FF1276CF" FontSize="30" Click="btnJornalCol_Click" BorderThickness="5,5,5,5" BorderBrush="Black" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
+            <Button x:Name="btnBookColl" Content="Book collection" VerticalAlignment="Stretch" Background="#FF1276CF" FontSize="30" Click="btnBookColl_Click" BorderBrush="Black" BorderThickness="5,2,5,5"  Grid.Column="0" Grid.Row="2" HorizontalAlignment="Stretch"/>
+            
+            <TextBlock Grid.Row="0" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Customers panel" FontSize="30" FontFamily="Aharoni" FontWeight="Bold" TextDecorations="Underline"/>
+            <Button Content="Add new customer"  Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="#FF1276CF" FontSize="25"  Grid.Column="4" BorderBrush="Black" BorderThickness="5,5,5,2"/>
+            <Button Content="View all customers" Grid.Row="2" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="#FF1276CF" FontSize="28" Grid.Column="4" BorderThickness="5,5,5,5" BorderBrush="Black"/>
 
-        <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="10,0,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="201" Width="1291" FontSize="100" Grid.ColumnSpan="4" TextAlignment="Center" FontWeight="Bold" FontFamily="Sitka Heading" RenderTransformOrigin="0.503,0.398" TextDecorations="Underline"><Run Text="Book  Library "/><Run Text="and Store "/></TextBlock>
-        <Button x:Name="btnJornalCol" Content="Jornal collection" Margin="0,9,0,0" Grid.Row="1" VerticalAlignment="Top" Height="100" Width="338" Background="#FF1276CF" FontSize="36" Grid.Column="1" Grid.ColumnSpan="2" Click="btnJornalCol_Click" BorderThickness="5,5,5,5" BorderBrush="Black"/>
-        <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="25,256,0,0" TextWrapping="Wrap" Text="Admin Panel" VerticalAlignment="Top" Height="77" Width="314" FontSize="48" FontFamily="Aharoni" FontWeight="Bold" Grid.RowSpan="2" TextDecorations="Underline" Grid.ColumnSpan="2"/>
-        <TextBlock Grid.Column="3" HorizontalAlignment="Left" Margin="10,256,0,0" TextWrapping="Wrap" Text="Customer panel" VerticalAlignment="Top" Height="77" Width="356" FontSize="48" FontFamily="Aharoni" FontWeight="Bold" Grid.RowSpan="2" Grid.ColumnSpan="2" TextDecorations="Underline"/>
-        <Button Content="Add new customer" Margin="1,80,0,0" Grid.Row="1" VerticalAlignment="Top" Height="100" Width="338" Background="#FF1276CF" FontSize="36" Grid.Column="3" Grid.ColumnSpan="2" BorderBrush="Black" BorderThickness="5,5,5,2"/>
-        <Button x:Name="btnBookColl" Content="Book collection" Grid.Row="1" VerticalAlignment="Bottom" Height="100" Width="338" Background="#FF1276CF" FontSize="45" Grid.Column="1" Grid.ColumnSpan="2" Click="btnBookColl_Click" BorderBrush="Black" BorderThickness="5,2,5,5" Margin="0,0,0,106" Grid.RowSpan="2"/>
-        <Button Content="View all customers" Margin="1,43,0,0" Grid.Row="2" VerticalAlignment="Top" Height="100" Width="338" Background="#FF1276CF" FontSize="36" Grid.Column="3" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
-        <Button x:Name="btnNewEmployee" Content="New employee" Margin="0,93,0,0" Grid.Row="3" VerticalAlignment="Top" Height="100" Width="338" Background="#FF1276CF" FontSize="36" Grid.Column="1" Grid.ColumnSpan="2" Click="btnJornalCol_Click" BorderThickness="5,5,5,5" BorderBrush="Black"/>
-        <TextBlock HorizontalAlignment="Left" Margin="287,40,0,0" TextWrapping="Wrap" Text="Employee panel" VerticalAlignment="Top" Height="77" Width="364" FontSize="48" FontFamily="Aharoni" FontWeight="Bold" TextDecorations="Underline" Grid.Row="3" Grid.ColumnSpan="3"/>
+            <TextBlock Grid.Row="0" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Employee panel" FontSize="30" FontFamily="Aharoni" FontWeight="Bold" TextDecorations="Underline"/>
+            <Button x:Name="btnNewEmployee" Content="New employee"  Grid.Row="1" Background="#FF1276CF" FontSize="30" Click="btnJornalCol_Click" BorderThickness="5,5,5,5" BorderBrush="Black" Grid.Column ="2"  VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
+        </Grid>
+
+        <TextBlock Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="201"  FontSize="100" TextAlignment="Center" FontWeight="Bold" FontFamily="Sitka Heading"  TextDecorations="Underline"><Run Text="Book  Library "/><Run Text="and Store "/></TextBlock>
     </Grid>
 
 </Page>
