--- a/LibraryProject/AddNewBookPage.xaml
+++ b/LibraryProject/AddNewBookPage.xaml
@@ -8,80 +8,66 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid Background="#FF76B3B1">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="235.2"/>
-            <RowDefinition Height="80"/>
-            <RowDefinition Height="80"/>
-            <RowDefinition Height="80"/>
-            <RowDefinition Height="80"/>
-            <RowDefinition Height="80"/>
-            <RowDefinition Height="80"/>
-            <RowDefinition Height="80"/>
-            <RowDefinition Height="80"/>
-            <RowDefinition Height="80"/>
-            <RowDefinition Height="80"/>
-
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="228.8"/>
-            <ColumnDefinition Width="731"/>
-            <ColumnDefinition Width="706"/>
-            <ColumnDefinition Width="234.4"/>
-        </Grid.ColumnDefinitions>
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Grid.Row="1" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="85" Width="551" FontSize="48" TextAlignment="Left" Background="#FFFFF5F5" BorderBrush="Black" BorderThickness="5,5,5,5"/>
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Grid.Row="7" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="80" Width="541" FontSize="48" TextAlignment="Left" Background="White" BorderBrush="Black" BorderThickness="5,5,5,5"/>
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Grid.Row="5" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="80" Width="531" FontSize="48" TextAlignment="Left" Margin="10,0,0,0" Background="White" BorderBrush="Black" BorderThickness="5,5,5,5"/>
-        <TextBox Grid.Column="1" HorizontalAlignment="Left" Grid.Row="3" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="80" Width="541" FontSize="48" TextAlignment="Left" BorderBrush="#FF080303" Background="White" BorderThickness="5,5,5,5"/>
-        <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="10,177,0,0" TextWrapping="Wrap" Text="Title" VerticalAlignment="Top" Height="59" Width="176" FontSize="36" Grid.RowSpan="2" FontWeight="Bold"/>
-        <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="10,27,0,0" Grid.Row="2" TextWrapping="Wrap" Text="Publish date" VerticalAlignment="Top" Height="59" Width="279" FontSize="36" Grid.RowSpan="2" FontWeight="Bold"/>
-        <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="10,32,0,0" Grid.Row="4" TextWrapping="Wrap" Text="Publisher" VerticalAlignment="Top" Height="59" Width="176" FontSize="36" Grid.RowSpan="2" FontWeight="Bold"/>
-        <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="0,32,0,0" Grid.Row="6" TextWrapping="Wrap" Text="Serial number" VerticalAlignment="Top" Height="59" Width="262" FontSize="36" Grid.RowSpan="2" FontWeight="Bold"/>
-        <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="324,49,0,0" Grid.Row="2" TextWrapping="Wrap" Text="input example: year,month,day" VerticalAlignment="Top" Height="25" Width="225" FontSize="16" FontWeight="Normal" Foreground="#FFB50887"/>
-        <TextBox HorizontalAlignment="Left" Grid.Row="9" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="80" Width="541" FontSize="48" TextAlignment="Left" Background="White" BorderBrush="Black" BorderThickness="5,5,5,5" Grid.ColumnSpan="2" Margin="225,0,0,0"/>
-        <TextBlock HorizontalAlignment="Left" Margin="225,32,0,0" Grid.Row="8" TextWrapping="Wrap" Text="Country" VerticalAlignment="Top" Height="59" Width="262" FontSize="36" Grid.RowSpan="2" FontWeight="Bold" Grid.ColumnSpan="2"/>
-        <Grid Background="#FF76B3B1" Grid.ColumnSpan="4" Margin="0,0,-20,-45" Grid.RowSpan="11">
+  
+        <Grid Background="#FF76B3B1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="235.2"/>
-                <RowDefinition Height="80"/>
-                <RowDefinition Height="80"/>
-                <RowDefinition Height="80"/>
-                <RowDefinition Height="80"/>
-                <RowDefinition Height="80"/>
-                <RowDefinition Height="80"/>
-                <RowDefinition Height="80"/>
-                <RowDefinition Height="80"/>
-                <RowDefinition Height="80"/>
-                <RowDefinition Height="80"/>
+                <RowDefinition Height="2*"/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
 
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="228.8"/>
-                <ColumnDefinition Width="731"/>
-                <ColumnDefinition Width="706"/>
-                <ColumnDefinition Width="234.4"/>
+                <ColumnDefinition />
+                <ColumnDefinition Width="4*"/>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="4*"/>
+            <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <TextBox x:Name="titleTxt" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="1" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="85" Width="551" FontSize="48" TextAlignment="Left" Background="#FFFFF5F5" BorderBrush="Black" BorderThickness="5,5,5,5"/>
-            <TextBox x:Name="serialNumberTxt" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="7" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="80" Width="541" FontSize="48" TextAlignment="Left" Background="White" BorderBrush="Black" BorderThickness="5,5,5,5"/>
-            <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="10,177,0,0" TextWrapping="Wrap" Text="Title" VerticalAlignment="Top" Height="59" Width="176" FontSize="36" Grid.RowSpan="2" FontWeight="Bold"/>
-            <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="10,27,0,0" Grid.Row="2" TextWrapping="Wrap" Text="Publish date" VerticalAlignment="Top" Height="59" Width="279" FontSize="36" Grid.RowSpan="2" FontWeight="Bold"/>
-            <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="10,32,0,0" Grid.Row="4" TextWrapping="Wrap" Text="Publisher" VerticalAlignment="Top" Height="59" Width="176" FontSize="36" Grid.RowSpan="2" FontWeight="Bold"/>
-            <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="0,32,0,0" Grid.Row="6" TextWrapping="Wrap" Text="Serial number" VerticalAlignment="Top" Height="59" Width="262" FontSize="36" Grid.RowSpan="2" FontWeight="Bold"/>
-            <TextBlock HorizontalAlignment="Left" Margin="225,32,0,0" Grid.Row="8" TextWrapping="Wrap" Text="Country" VerticalAlignment="Top" Height="59" Width="262" FontSize="36" Grid.RowSpan="2" FontWeight="Bold" Grid.ColumnSpan="2"/>
-            <TextBox x:Name="synopsisTxt" Grid.Column="2" HorizontalAlignment="Center" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="230" Width="706" FontSize="48" TextAlignment="Left" Background="White" BorderBrush="Black" BorderThickness="5,5,5,5" Margin="0,10,0,0" Grid.RowSpan="3" Grid.Row="5"/>
-            <TextBlock Grid.Column="2" HorizontalAlignment="Left" Margin="10,22,0,0" TextWrapping="Wrap" Text="Synopsis" VerticalAlignment="Top" Height="59" Width="262" FontSize="36" FontWeight="Bold" Grid.Row="4" Grid.RowSpan="2"/>
-            <Button x:Name="btnAddNewBook" Content="Add new book" Height="80" Width="205" FontSize="22" Background="#FFA06BEF" BorderBrush="Black" Grid.Column="2" Grid.Row="9" Margin="501,0,0,0" Click="btnAddNewBook_Click" IsEnabled="False"/>
-            <Button x:Name="btnCheckFields" Content="Check fileds" Height="80" Width="205" FontSize="22" Background="#FFA06BEF" BorderBrush="Black" Grid.Column="2" Grid.Row="9" Click="btnCheckFields_Click"/>
-            <TextBlock x:Name="issuesTxt" Grid.Column="2" HorizontalAlignment="Left" Margin="205,70,0,0" Grid.Row="8" TextWrapping="Wrap" VerticalAlignment="Top" Width="283" Height="96" Grid.RowSpan="3" Foreground="Red" FontSize="9"/>
-            <Button x:Name="btnBookViewBack" Content="Back" Margin="0,172,0,0" VerticalAlignment="Top" Height="53" Width="111" FontSize="22" Background="#FFA06BEF" Click="btnBookViewBack_Click" HorizontalAlignment="Center" BorderBrush="Black"/>
-            <TextBox x:Name="authorTxt" Grid.Column="2" HorizontalAlignment="Left" Grid.Row="3" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="80" Width="541" FontSize="48" TextAlignment="Left" BorderBrush="#FF080303" Background="White" BorderThickness="5,5,5,5"/>
-            <TextBlock Grid.Column="2" HorizontalAlignment="Left" Margin="10,177,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="59" Width="176" FontSize="36" Grid.RowSpan="2" FontWeight="Bold"><Run FlowDirection="RightToLeft" Text="G"/><Run Text="ener"/></TextBlock>
-            <TextBlock Grid.Column="2" HorizontalAlignment="Left" Margin="10,27,0,0" Grid.Row="2" TextWrapping="Wrap" Text="Author" VerticalAlignment="Top" Height="59" Width="279" FontSize="36" Grid.RowSpan="2" FontWeight="Bold"/>
-            <TextBlock Grid.Column="2" HorizontalAlignment="Left" Margin="324,42,0,0" Grid.Row="2" TextWrapping="Wrap" Text="input example:  Tolstoy, Rowling" VerticalAlignment="Top" Height="25" Width="250" FontSize="16" FontWeight="Normal" Foreground="#FFB50887"/>
-            <ComboBox x:Name="countrCmb" Grid.ColumnSpan="2" Margin="225,0,0,0" Grid.Row="9" Width="545" Background="White" Height="80" VerticalAlignment="Center" BorderThickness="5,5,5,5" BorderBrush="Black" FontSize="48"/>
-            <ComboBox x:Name="generCmb" Grid.Row="1" Width="545" Background="White" Height="80" BorderThickness="5,5,5,5" BorderBrush="Black" Grid.Column="2" VerticalAlignment="Center" FontSize="48"/>
-            <ComboBox x:Name="publisherCmb" Grid.ColumnSpan="2" Margin="225,0,0,0" Grid.Row="5" Width="545" Background="White" Height="80" VerticalAlignment="Center" BorderThickness="5,5,5,5" BorderBrush="Black" FontSize="48"/>
-            <DatePicker x:Name="calendarPicker" Margin="225,0,0,0" Grid.ColumnSpan="2" Grid.Row="3" Height="80" Width="460" FontSize="48" Background="White" FontFamily="Yu Gothic UI Semibold" FontWeight="Bold" FontStyle="Normal"/>
+            <Button x:Name="btnBookViewBack" Content="Back" VerticalAlignment="Bottom"  FontSize="22" Background="#FFA06BEF" Click="btnBookViewBack_Click" HorizontalAlignment="Center" BorderBrush="Black"/>
+
+            <TextBlock Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left" Text="Title: " VerticalAlignment="Bottom" FontSize="36"  FontWeight="Bold"/>
+            <TextBox x:Name="titleTxt" Grid.Column="1" Grid.Row="1" Text="" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TextAlignment="Left" Background="#FFFFF5F5" BorderBrush="Black" BorderThickness="5,5,5,5"/>
+
+            <TextBlock Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" Text="Publish date" VerticalAlignment="Bottom" FontSize="36" FontWeight="Bold"/>
+            <DatePicker x:Name="calendarPicker"  Grid.Row="3" Grid.Column="1" FontSize="48" Background="White" FontFamily="Yu Gothic UI Semibold" FontWeight="Bold" HorizontalAlignment="Stretch" VerticalAlignment="Top" FontStyle="Normal"/>
+
+            <TextBlock Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" Text="Publisher" VerticalAlignment="Bottom" FontSize="36" FontWeight="Bold"/>
+            <ComboBox x:Name="publisherCmb"   Grid.Row="5" Grid.Column="1" Background="White"  VerticalAlignment="Stretch" HorizontalAlignment="Stretch" BorderThickness="5,5,5,5" BorderBrush="Black" FontSize="48"/>
+
+            <TextBlock Grid.Column="1" HorizontalAlignment="Left" Grid.Row="6"  Text="Serial number" VerticalAlignment="Bottom" FontSize="36"  FontWeight="Bold"/>
+            <TextBox x:Name="serialNumberTxt" Grid.Column="1" HorizontalAlignment="Stretch" Grid.Row="7" Text="" VerticalAlignment="Stretch"  FontSize="48" TextAlignment="Left" Background="White" BorderBrush="Black" BorderThickness="5,5,5,5"/>
+
+            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Bottom" Grid.Row="8" Grid.Column="1" Text="Country" FontSize="36" FontWeight="Bold"/>
+            <ComboBox x:Name="countrCmb" Grid.Row="9" Grid.Column="1" Background="White" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" BorderThickness="5,5,5,5" BorderBrush="Black" FontSize="48"/>
+            
+            <TextBlock Grid.Column="3" Grid.Row="0" HorizontalAlignment="Left"  VerticalAlignment="Bottom" FontSize="36" FontWeight="Bold" Text="Gener"/>
+            <ComboBox x:Name="generCmb" Grid.Row ="1" Grid.Column="3" Background="White"  BorderThickness="5,5,5,5" BorderBrush="Black" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" FontSize="48"/>
+
+            <TextBlock Grid.Column="3" HorizontalAlignment="Left" Grid.Row="2" Text="Author" VerticalAlignment="Bottom"  FontSize="36" FontWeight="Bold"/>
+            <TextBox x:Name="authorTxt" Grid.Column="3" HorizontalAlignment="Stretch" Grid.Row="3" Text="" VerticalAlignment="Stretch" FontSize="48" TextAlignment="Left" BorderBrush="#FF080303" Background="White" BorderThickness="5,5,5,5"/>
+
+            <TextBlock Grid.Column="3" Grid.Row="4"  HorizontalAlignment="Left" Text="Synopsis" VerticalAlignment="Bottom" FontSize="36" FontWeight="Bold"/>
+            <TextBox x:Name="synopsisTxt" Grid.Column="3" HorizontalAlignment="Stretch" Text="" VerticalAlignment="Stretch" FontSize="48" TextAlignment="Left" Background="White" BorderBrush="Black" BorderThickness="5,5,5,5" Margin="0,10,0,0" Grid.RowSpan="3" Grid.Row="5"/>
+
+            <Grid Grid.Row="9" Grid.Column="3">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Button x:Name="btnAddNewBook" VerticalAlignment="Stretch" Content="Add new book" FontSize="22" Background="#FFA06BEF" BorderBrush="Black" Grid.Column="2" HorizontalAlignment="Stretch"  Click="btnAddNewBook_Click" IsEnabled="False"/>
+            <Button x:Name="btnCheckFields" Content="Check fileds" FontSize="22" Background="#FFA06BEF" BorderBrush="Black" Grid.Column="0"  Click="btnCheckFields_Click" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
+            <TextBlock x:Name="issuesTxt" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Foreground="Red" FontSize="9"/>
         </Grid>
-    </Grid>
+            
+        </Grid>
+    
 </Page>
