--- a/LibraryProject/MainsPage.xaml
+++ b/LibraryProject/MainsPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="LibraryProject.MainPage"
+    x:Class="LibraryProject.MainsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:LibraryProject"
@@ -46,9 +46,10 @@
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <Button x:Name="btnLogIn" Grid.Column="1" Content="Log In" Foreground="Black" Background="#FFA06BEF" BorderBrush="Black" FontSize="24"  VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
+                <Button x:Name="btnLogIn" Grid.Column="1" Content="Log In" Foreground="Black" Background="#FFA06BEF" BorderBrush="Black" FontSize="24"  VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Height="72" Click="btnLogIn_Click"/>
 
             </Grid>
+            <TextBlock x:Name="issuesTxt" Grid.Column="1" HorizontalAlignment="Stretch"  Grid.Row="5" TextWrapping="Wrap" Text="" VerticalAlignment="Center" FontSize="30" Foreground="Red"/>
         </Grid>
         <TextBlock Grid.Column="1" HorizontalAlignment="Center" Text="Welcome to Alex's Book Library and store" VerticalAlignment="Center" FontSize="60" FontFamily="Elephant"/>
         <Button x:Name="btnNewEmployee" Grid.Column="2" Content="New Employee?"  VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Black" Background="#FFA06BEF" BorderBrush="Black"/>
