--- a/LibraryProject/JornalCollectionPage.xaml
+++ b/LibraryProject/JornalCollectionPage.xaml
@@ -40,7 +40,7 @@
             <TextBox Grid.Column="8" Grid.ColumnSpan="2" HorizontalAlignment="Stretch"  TextWrapping="Wrap" VerticalAlignment="Center"  FontSize="24" Background="White"/>
 
         </Grid>
-        <Button x:Name="btnBookViewBack" Grid.Row="1" Content="Back"  VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="22" Background="#FFA06BEF" Click="btnBookViewBack_Click"  BorderBrush="Black"/>
+        <Button x:Name="btnJornalViewBack" Grid.Row="1" Content="Back"  VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="22" Background="#FFA06BEF" Click="btnJornalViewBack_Click"  BorderBrush="Black"/>
 
         <ListView x:Name="listMenuView" Grid.Column="1" Grid.Row="2" Background="White"/>
         <ComboBox x:Name="cbFilter" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Stretch" Background="White" Height="40" SelectionChanged="cbFilter_SelectionChanged">
