--- a/LibraryProject/LibraryItemDitalesPage.xaml
+++ b/LibraryProject/LibraryItemDitalesPage.xaml
@@ -19,8 +19,36 @@
             <ColumnDefinition Width="8*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Grid Grid.Row="1" Grid.Column="1">
-            
+        <Grid x:Name="gridPanel" Grid.Row="1" Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="2*"/>
+            </Grid.ColumnDefinitions>
+            <Grid  Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="7*"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid x:Name="btnGrid" Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Button x:Name="btnOutOfStock" Grid.Column="5" Content="Out item"  VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="#FFA06BEF" FontSize="20" FontWeight="Normal" Click="btnOutOfStock_Click" BorderBrush="Black"/>
+                    <Rectangle x:Name="rectStatus" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Stretch"  Stroke="Black" VerticalAlignment="Stretch" Fill="#FF00FF10" />
+                    <TextBlock x:Name="statusTxt" Grid.Column="2" HorizontalAlignment="Center"  Text="" VerticalAlignment="Center" FontSize="24"/>
+                    <Button x:Name="btnReturn" Grid.Column="4" Content="Return"  VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="#FFA06BEF" FontSize="20" FontWeight="Normal" Click="btnReturnItem_Click" BorderBrush="Black" />
+                    <Button x:Name="btnSell" Grid.Column="3" Content="Sell"  VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="#FFA06BEF" FontSize="20" FontWeight="Normal" Click="btnSellItem_Click" BorderBrush="Black" />
+
+                </Grid>
+                <TextBlock x:Name="liInfoTxt" HorizontalAlignment="Stretch" TextAlignment="Left" Text="" VerticalAlignment="Stretch" FontSize="35"/>
+            </Grid>
+            <ListView x:Name="ListCustomers" Background="White" BorderBrush="Black" BorderThickness="2,2,2,2"/>
         </Grid>
+        <Button Content="Back"  VerticalAlignment="Center" HorizontalAlignment="Center" Background="#FFA06BEF" BorderBrush="Black" FontSize="18" Click="btnBack_Click"/>
     </Grid>
 </Page>
