--- a/LibraryProject/BasicPages/MenengerPage.xaml
+++ b/LibraryProject/BasicPages/MenengerPage.xaml
@@ -37,15 +37,18 @@
             </Grid.ColumnDefinitions>
             <Grid Grid.Row="0" Grid.ColumnSpan="5" Background="Aqua"/>
             <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Admin Panel" FontSize="20" FontFamily="Aharoni" FontWeight="Bold" TextDecorations="Underline"/>
-            <Button x:Name="btnJornalCol" Content="Jornal collection"  Grid.Row="1" Grid.Column="0"  Background="#FF1276CF" FontSize="20" Click="btnJornalCol_Click" BorderThickness="5,5,5,5" BorderBrush="Black" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
-            <Button x:Name="btnBookColl" Content="Book collection" VerticalAlignment="Stretch" Background="#FF1276CF" FontSize="20" Click="btnBookColl_Click" BorderBrush="Black" BorderThickness="5,2,5,5"  Grid.Column="0" Grid.Row="2" HorizontalAlignment="Stretch"/>
+            <Button x:Name="btnJornalCol" Content="Jornal collection"  Grid.Row="1" Grid.Column="0"  Background="#FF1276CF" FontSize="20" Click="btnJornalCol_Click" BorderThickness="3,5,3,3" BorderBrush="Black" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
+            <Button x:Name="btnBookColl" Content="Book collection" VerticalAlignment="Stretch" Background="#FF1276CF" FontSize="20" Click="btnBookColl_Click" BorderBrush="Black" BorderThickness="3,2,3,3"  Grid.Column="0" Grid.Row="2" HorizontalAlignment="Stretch"/>
 
             <TextBlock Grid.Row="0" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Customers panel" FontSize="30" FontFamily="Aharoni" FontWeight="Bold" TextDecorations="Underline"/>
-            <Button Content="Add new customer"  Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="#FF1276CF" FontSize="20"  Grid.Column="4" BorderBrush="Black" BorderThickness="5,5,5,2"/>
-            <Button Content="View all customers" Grid.Row="2" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="#FF1276CF" FontSize="20" Grid.Column="4" BorderThickness="5,5,5,5" BorderBrush="Black"/>
+            <Button Content="Add new customer"  Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="#FF1276CF" FontSize="20"  Grid.Column="4" BorderBrush="Black" BorderThickness="3,5,3,3"/>
+            <Button Content="View all customers" Grid.Row="2" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background="#FF1276CF" FontSize="20" Grid.Column="4" BorderThickness="3,5,3,3" BorderBrush="Black"/>
 
             <TextBlock Grid.Row="0" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Employee panel" FontSize="20" FontFamily="Aharoni" FontWeight="Bold" TextDecorations="Underline"/>
-            <Button x:Name="btnNewEmployee" Content="New employee"  Grid.Row="1" Background="#FF1276CF" FontSize="20" Click="btnJornalCol_Click" BorderThickness="5,5,5,5" BorderBrush="Black" Grid.Column ="2"  VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
+            <Button x:Name="btnNewEmployee" Content="New employee"  Grid.Row="1" Background="#FF1276CF" FontSize="20" Click="btnJornalCol_Click" BorderThickness="3,3,3,3" BorderBrush="Black" Grid.Column ="2"  VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
+
+            <Button x:Name="btnHistory" Content="History"  Grid.Row="4" Background="#FF1276CF" FontSize="30" Click="btnHistory_Click" BorderThickness="3,3,3,3" BorderBrush="Black" Grid.Column ="2"  VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
+
         </Grid>
         <Button x:Name="btnLogOut" Grid.Row="0" Content="Log Out"  VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="22" Background="#FFA06BEF" BorderBrush="Black" Click="btnLogOut_Click"/>
 
